Adição do exemplo de lógicas frontend para rodar o projeto

--- a/Base-Frontend/static/index.html
+++ b/Base-Frontend/static/index.html
@@ -15,6 +15,23 @@
             Projeto de LPF
         </h1>
     </header>
+    <div>
+        Esta página contém um programa escrito em kotlin que executa no
+        navegador.<p>
+            <button onclick="frontend.botaoClicado('blue')" >Pressione esse Botão</button> 
+            <button onclick="frontend.botaoClicado('green')" >Aqui tem outro Botão</button> 
+            <button onclick="frontend.botaoLimpar()" >Limpar a tela</button> 
+        
+        <p id="p1">
+            Este texto foi digitado no arquivo HTML
+        </p>
+    </div>
+
+
+
+    <script src="https://cdn.jsdelivr.net/npm/kotlin@1.5.0/kotlin.js">
+    </script>
+    <script src="frontend.js"></script>
 </body>
 
 </html>
