CSS fix e adição de botões de escolha do tipo de pokemon

--- a/Base-Frontend/static/calculator.html
+++ b/Base-Frontend/static/calculator.html
@@ -19,8 +19,71 @@
     <div class="justify-center" style="padding-top: 30px; padding-bottom: 40px;">
         <img src="../static/images/256px-International_Pokémon_logo.svg.png">
     </div>
+    <div class="justify-center" style="padding-bottom: 20px;">
+        <div class="page-font" style="font-size: 24px; color: #0b065b;">
+            Escolha o 1º tipo do primeiro pokémon
+        </div>
+    </div>
+    <div class="grid-container">
+        <div>
+            <button class="button-style page-font" style="border: none;"> Fire</button>
+        </div>
+        <div>
+            <button class="button-style page-font" style="border: none;"> Grass</button>
+        </div>
+        <div>
+            <button class="button-style page-font" style="border: none;"> Ghost</button>
+        </div>
+        <div>
+            <button class="button-style page-font" style="border: none;"> Fairy</button>
+        </div>
+        <div>
+            <button class="button-style page-font" style="border: none;"> Ice</button>
+        </div>
+        <div>
+            <button class="button-style page-font" style="border: none;"> Flying</button>
+        </div>
+        <div>
+            <button class="button-style page-font" style="border: none;"> Water</button>
+        </div>
+        <div>
+            <button class="button-style page-font" style="border: none;"> Ground</button>
+        </div>
+        <div>
+            <button class="button-style page-font" style="border: none;"> Psychic</button>
+        </div>
+        <div>
+            <button class="button-style page-font" style="border: none;"> Dragon</button>
+        </div>
+        <div>
+            <button class="button-style page-font" style="border: none;"> Fighting</button>
+        </div>
+        <div>
+            <button class="button-style page-font" style="border: none;"> Bug</button>
+        </div>
+        <div>
+            <button class="button-style page-font" style="border: none;"> Electric</button>
+        </div>
+        <div>
+            <button class="button-style page-font" style="border: none;"> Rock</button>
+        </div>
+        <div>
+            <button class="button-style page-font" style="border: none;"> Dark</button>
+        </div>
+        <div>
+            <button class="button-style page-font" style="border: none;"> Steel</button>
+        </div>
+        <div>
+            <button class="button-style page-font" style="border: none;"> Normal</button>
+        </div>
+        <div>
+            <button class="button-style page-font" style="border: none;"> Poison</button>
+        </div>
+    </div>
 
-    <div class="justify-center"> <button class="button-style" onclick="location.href='./mainPage.html'"> Voltar</button> </div>
+    <div class="justify-center" style="padding: 40px;"> <button class="button-style page-font" onclick="location.href='./mainPage.html'">
+            Voltar</button>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/kotlin@1.5.0/kotlin.js">
     </script>
     <script src="frontend.js"></script>
