--- a/Base-Frontend/static/calculator.html
+++ b/Base-Frontend/static/calculator.html
@@ -81,7 +81,8 @@
         </div>
     </div>
 
-    <div class="justify-center" style="padding: 40px;"> <button class="button-style page-font" onclick="location.href='./mainPage.html'">
+    <div class="justify-center" style="padding: 40px;"> <button class="button-style page-font"
+            onclick="location.href='./mainPage.html'">
             Voltar</button>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/kotlin@1.5.0/kotlin.js">
