--- a/Base-Frontend/static/mainPage.html
+++ b/Base-Frontend/static/mainPage.html
@@ -20,7 +20,7 @@
         <img src="../static/images/256px-International_Pokémon_logo.svg.png">
     </div>
     <div class="justify-center">
-        <button class="button-style page-font" onclick="location.href='./calculator.html'">Iniciar</button>
+        <button class="button-style page-font" onclick="location.href='./selectPokemon.html'">Iniciar</button>
     </div>
     <div class="justify-center" style="padding-top: 30px;">
         <button class="button-style page-font" onclick="frontend.botaoLimpar()">Tutorial</button>
