--- a/Base-Frontend/static/selectPokemon.html
+++ b/Base-Frontend/static/selectPokemon.html
@@ -82,7 +82,7 @@
     </div>
 
     <div class="justify-center" style="padding: 40px;"> <button class="button-style page-font"
-            onclick="location.href='./mainPage.html'">
+            onclick="location.href='./index.html'">
             Voltar</button>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/kotlin@1.5.0/kotlin.js">
