Alterações para renderizar a imagem

--- a/Base-Frontend/static/index.html
+++ b/Base-Frontend/static/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body
-    style="background-image: url('../static/images/background.png'); background-repeat: no-repeat; background-attachment: fixed;">
+    style="background-image: url('./images/background.png'); background-repeat: no-repeat; background-attachment: fixed;">
     <div class="justify-center" style="padding-top: 30px;">
         <div class="page-font" style="font-size: 70px; color: #0b065b;">
             Calculadora de dano
