--- a/Base-Frontend/static/index.html
+++ b/Base-Frontend/static/index.html
@@ -17,7 +17,7 @@
         </div>
     </div>
     <div class="justify-center" style="padding-top: 30px; padding-bottom: 40px;">
-        <img src="../static/images/256px-International_Pokémon_logo.svg.png">
+        <img src="./images/256px-International_Pokémon_logo.svg.png">
     </div>
     <div class="justify-center">
         <button class="button-style page-font" onclick="location.href='./selectPokemon.html'">Iniciar</button>
