--- a/Base-Frontend/static/selectPokemon.html
+++ b/Base-Frontend/static/selectPokemon.html
@@ -17,7 +17,7 @@
         </div>
     </div>
     <div class="justify-center" style="padding-top: 30px; padding-bottom: 40px;">
-        <img src="../static/images/256px-International_Pokémon_logo.svg.png">
+        <img src="./images/256px-International_Pokémon_logo.svg.png">
     </div>
     <div class="justify-center" style="padding-bottom: 20px;">
         <div class="page-font" style="font-size: 24px; color: #0b065b;">
