--- a/Base-Frontend/static/selectPokemon.html
+++ b/Base-Frontend/static/selectPokemon.html
@@ -241,6 +241,7 @@
     </div>
     <script src="https://cdn.jsdelivr.net/npm/kotlin@1.5.0/kotlin.js">
     </script>
+    <!-- <script src="./c"></script> -->
 </body>
 
 </html>
