--- a/Base-Frontend/static/selectPokemon.html
+++ b/Base-Frontend/static/selectPokemon.html
@@ -19,7 +19,7 @@
     <div class="justify-center" style="padding-top: 30px; padding-bottom: 40px;">
         <img src="./images/256px-International_Pokémon_logo.svg.png">
     </div>
-    <form action="/" method="post">
+    <form action="/Calculator.js" method="get">
         <div class="row">
             <div class="col">
                 <div style="padding: 50px;">
@@ -60,7 +60,7 @@
                         Selecione o 2º tipo do Pokémon
                     </div>
                     <div style="padding: 20px;">
-                        <select nname="pokemon1.type2" id="" style="width: 200px; height: 30px;">
+                        <select name="pokemon1.type2" id="" style="width: 200px; height: 30px;">
                             <option value="" selected disabled>Selecione:</option>
                             <option value="1">Fire</option>
                             <option value="2">Grass</option>
@@ -89,7 +89,8 @@
                             ATK:
                         </div>
                         <div style="padding: 20px; display: inline-block;">
-                            <input type="number" name="pokemon1.atk" style="width: 200px;" placeholder="Insira um número...">
+                            <input type="number" name="pokemon1.atk" style="width: 200px;"
+                                placeholder="Insira um número...">
                         </div>
                     </div>
                     <div class="page-font col-3" style="font-size: 24px; color: #0b065b; display: inline-block;">
@@ -97,7 +98,8 @@
                             SP.ATK
                         </div>
                         <div style="padding: 20px; display: inline-block;">
-                            <input type="number" name="pokemon1.spatk" style="width: 200px;" placeholder="Insira um número...">
+                            <input type="number" name="pokemon1.spatk" style="width: 200px;"
+                                placeholder="Insira um número...">
                         </div>
                     </div>
                     <div class="page-font col-3" style="font-size: 24px; color: #0b065b; display: inline-block;">
@@ -105,7 +107,8 @@
                             LEVEL:
                         </div>
                         <div style="padding: 20px; display: inline-block;">
-                            <input type="number" name="pokemon1.level" style="width: 200px;" placeholder="Insira um número...">
+                            <input type="number" name="pokemon1.level" style="width: 200px;"
+                                placeholder="Insira um número...">
                         </div>
                     </div>
                 </div>
@@ -115,7 +118,8 @@
                             Informe o poder de ataque:
                         </div>
                         <div style="padding: 20px;">
-                            <input type="number" name="pokemon1.atkpower" style="width: 200px;" placeholder="Insira um número...">
+                            <input type="number" name="pokemon1.atkpower" style="width: 200px;"
+                                placeholder="Insira um número...">
                         </div>
                     </div>
                     <div class="col">
@@ -123,7 +127,7 @@
                             O ataque é especial?
                         </div>
                         <div class="page-font" style="padding: 20px; color: #0b065b;">
-                            <input type="checkbox" id="scales" name="pokemon1.atkType style="transform: scale(1.5);">
+                            <input type="checkbox" id="scales" name="pokemon1.atkType style=" transform: scale(1.5);">
                             <label for="">Sim</label>
                         </div>
                     </div>
@@ -197,7 +201,8 @@
                             DEF:
                         </div>
                         <div style="padding: 20px;">
-                            <input type="number" name="pokemon2.def" style="width: 200px;" placeholder="Insira um número...">
+                            <input type="number" name="pokemon2.def" style="width: 200px;"
+                                placeholder="Insira um número...">
                         </div>
                     </div>
                     <div class="col">
@@ -205,7 +210,8 @@
                             SP.DEF:
                         </div>
                         <div style="padding: 20px;">
-                            <input type="number" name="pokemon2.spdef" style="width: 200px;" placeholder="Insira um número...">
+                            <input type="number" name="pokemon2.spdef" style="width: 200px;"
+                                placeholder="Insira um número...">
                         </div>
                     </div>
                 </div>
@@ -216,7 +222,6 @@
             <button class="button-style page-font" type="submit">Calcular</button>
         </div>
     </form>
-
 
     <div class="justify-center" style="padding-top: 40px;">
         <div class="page-font tutorial-div">
@@ -241,7 +246,7 @@
     </div>
     <script src="https://cdn.jsdelivr.net/npm/kotlin@1.5.0/kotlin.js">
     </script>
-    <!-- <script src="./c"></script> -->
+    <script src="./Calculator.js"></script>
 </body>
 
 </html>
