--- a/Base-Frontend/static/selectPokemon.html
+++ b/Base-Frontend/static/selectPokemon.html
@@ -19,7 +19,7 @@
     <div class="justify-center" style="padding-top: 30px; padding-bottom: 40px;">
         <img src="./images/256px-International_Pokémon_logo.svg.png">
     </div>
-    <form action="/Calculator.js" method="get">
+    <form method="post">
         <div class="row">
             <div class="col">
                 <div style="padding: 50px;">
@@ -219,7 +219,7 @@
         </div>
 
         <div class="justify-center">
-            <button class="button-style page-font" type="submit">Calcular</button>
+            <button class="button-style page-font" type="submit" onclick="Calculator.main(params)">Calcular</button>
         </div>
     </form>
 
